# fastapi-aws-lambda-example

./: .gitignore  .pre-commit-config.yml  .travis.yml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  template.yml  tree.txt
example_app/: main.py
example_app/api/api_v1/: api.py
example_app/api/api_v1/endpoints/: example.py
example_app/core/: config.py
example_app/core/models/: input.py  output.py
scripts/: example.ipynb
tests/: test_example_endpoint.py  test_ping.py
