[tool.poetry]
name = "your_app"
version = "0.1.0"
description = "fastapi aws lambda example"

license = "MIT"

authors = [
    "probably you <probably@you.io>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/iwpnd/fastapi-aws-lambda-example"
homepage = "https://github.com/iwpnd/fastapi-aws-lambda-example"

keywords = ['fastapi', 'aws lambda']

[tool.poetry.dependencies]
python = "^3.7"  # Compatible python versions must be declared here
toml = "^0.9"
fastapi = "^0.42.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"

